# image-invisible-watermarker

./: LICENSE  README.md  pyproject.toml
image_watermarker/: __init__.py  avif_heif_heif_watermark.py  jpg_watermark.py  png_watermark.py  utilities.py  webp_watermark.py
image_watermarker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_module1.py
